--- a/source/fe/fe_poly.inst.in
+++ b/source/fe/fe_poly.inst.in
@@ -22,6 +22,8 @@ for (deal_II_dimension : DIMENSIONS; deal_II_space_dimension :  SPACE_DIMENSIONS
     template class FE_Poly<ABFScalarPolynomials<deal_II_dimension>, deal_II_dimension, deal_II_space_dimension>;
     template class FE_Poly<TensorProductPolynomialsConst<deal_II_dimension>, deal_II_dimension, deal_II_space_dimension>;
     template class FE_Poly<TensorProductPolynomials<deal_II_dimension,Polynomials::PiecewisePolynomial<double> >, deal_II_dimension, deal_II_space_dimension>;
+    template class FE_Poly<SerendipityPolynomials<deal_II_dimension>, deal_II_dimension,
+    deal_II_space_dimension>;
     template class FE_Poly<PolynomialSpace<deal_II_dimension>, deal_II_dimension, deal_II_space_dimension>;
     template class FE_Poly<PolynomialsP<deal_II_dimension>, deal_II_dimension, deal_II_space_dimension>;
 #endif
