--- a/source/fe/CMakeLists.txt
+++ b/source/fe/CMakeLists.txt
@@ -43,6 +43,8 @@ SET(_src
   fe_q.cc
   fe_s_base.cc
   fe_s.cc
+  fe_s_np_base.cc
+  fe_s_np.cc
   fe_q_dg0.cc
   fe_q_hierarchical.cc
   fe_q_iso_q1.cc
@@ -87,10 +89,12 @@ SET(_inst
   fe_poly_tensor_npc.inst.in
   fe_q_base.inst.in
   fe_s_base.inst.in
+  fe_s_np_base.inst.in
   fe_q_dg0.inst.in
   fe_q_hierarchical.inst.in
   fe_q.inst.in
   fe_s.inst.in
+  fe_s_np.inst.in
   fe_q_iso_q1.inst.in
   fe_raviart_thomas.inst.in
   fe_raviart_thomas_nodal.inst.in
