--- a/source/fe/fe_s_np_base.inst.in
+++ b/source/fe/fe_s_np_base.inst.in
@@ -17,8 +17,8 @@
 
 for (deal_II_dimension : DIMENSIONS; deal_II_space_dimension :  SPACE_DIMENSIONS)
   {
-#if deal_II_dimension <= deal_II_space_dimension 	
-    template class FE_S_NP_Base<SerendipityPolynomials<deal_II_dimension>, deal_II_dimension, deal_II_space_dimension>;
+#if deal_II_dimension == deal_II_space_dimension 	
+    template class FE_S_NP_Base<SerendipityPolynomials<deal_II_dimension>, deal_II_dimension, deal_II_dimension>;
 #endif
   }
 
